Fixed menu shifting to the left

--- a/assets/css/ie-editor.css
+++ b/assets/css/ie-editor.css
@@ -602,12 +602,6 @@ div[data-type="core/button"] {
 	border: 3px solid #28303d;
 }
 
-.wp-block-file .wp-block-file__textlink {
-	border-bottom: 1px solid #39414d;
-	color: #28303d;
-	text-decoration: none;
-}
-
 .wp-block-file .wp-block-file__button {
 	display: inline-block;
 }
