--- a/assets/sass/06-components/navigation.scss
+++ b/assets/sass/06-components/navigation.scss
@@ -372,6 +372,7 @@
 @include media(mobile-only) {
 
 	.lock-scrolling .site {
+		display: flex;
 		position: fixed;
 		max-width: 100%;
 	}
