--- a/style.css
+++ b/style.css
@@ -3916,6 +3916,7 @@ h2.page-title {
 
 @media only screen and (max-width: 481px) {
 	.lock-scrolling .site {
+		display: flex;
 		position: fixed;
 		max-width: 100%;
 	}
